--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
+    "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
