--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run test"
     }
   },
   "eslintConfig": {
