Tests auto run in pre push

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint",
-      "pre-push": "npm run test"
+      "pre-push": "CI=true npm run test"
     }
   },
   "eslintConfig": {
