--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,10 @@
         "react/jsx-one-expression-per-line": ["error", {
             "allow": "none"
         }],
+        "react/jsx-max-props-per-line": [1, { 
+            "when": "always" 
+        }],
+        "react/jsx-first-prop-new-line": ["error", "multiline"],
         "react/jsx-no-comment-textnodes": "error",
         "react/jsx-no-duplicate-props": "error",
         "react/jsx-no-target-blank": "error",
