[POC] Added most of the SearchArea components (Search Input, Switch, JobDuration, JobType)
Missing area tags for search filters

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.6.0",
+    "@material-ui/lab": "^3.0.0-alpha.29",
     "notistack": "^0.4.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
