--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.6.0",
-    "@material-ui/lab": "^3.0.0-alpha.29",
-    "notistack": "^0.4.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
+    "notistack": "^0.4.3",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "react-select": "^2.3.0",
+    "react-scripts": "^3.0.1",
+    "react-select": "^3.0.4",
+    "react-transition-group": "^1.2.1",
     "redux": "^4.0.1",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
