--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.2.1",
     "notistack": "^0.4.3",
     "react": "^16.8.0",
+    "react-content-loader": "^4.2.2",
     "react-dom": "^16.8.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
