--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-jest": "^22.14.1",
     "eslint-plugin-react": "^7.12.3",
+    "eslint-plugin-react-hooks": "^1.6.1",
     "husky": "^1.1.4"
   }
 }
