--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nijobs-fe",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.16.0"
+  },
   "dependencies": {
     "@material-ui/core": "^3.6.0",
     "notistack": "^0.4.1",
