--- a/package.json
+++ b/package.json
@@ -74,14 +74,14 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
+    "test": "node scripts/test.js --watchAll=false",
     "lint-fix": "npm run lint -- --fix",
     "lint": "eslint src --max-warnings 0"
   },
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint-fix",
-      "pre-push": "CI=true npm run lint-fix && npm run test"
+      "pre-push": "npm run lint-fix && CI=true npm run test"
     }
   },
   "browserslist": [
