--- a/package.json
+++ b/package.json
@@ -6,18 +6,9 @@
     "node": "10.16.0"
   },
   "dependencies": {
+    "@babel/core": "7.5.5",
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
-    "notistack": "^0.4.3",
-    "react": "^16.8.0",
-    "react-content-loader": "^4.2.2",
-    "react-dom": "^16.8.0",
-    "react-redux": "^5.1.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.0.1",
-    "react-select": "^3.0.4",
-    "react-transition-group": "^1.2.1",
-    "@babel/core": "7.5.5",
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
@@ -50,6 +41,7 @@
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
     "mini-css-extract-plugin": "0.5.0",
+    "notistack": "^0.4.3",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -57,9 +49,18 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "react": "^16.8.0",
     "react-app-polyfill": "^1.0.2",
+    "react-content-loader": "^4.2.2",
     "react-dev-utils": "^9.0.3",
+    "react-dom": "^16.8.0",
+    "react-redux": "^5.1.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^3.0.1",
+    "react-select": "^3.0.4",
+    "react-transition-group": "^1.2.1",
     "redux": "^4.0.1",
+    "redux-mock-store": "^1.5.3",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
     "resolve": "1.12.0",
