Removed husky and pre-commit/push local checks

--- a/package.json
+++ b/package.json
@@ -84,12 +84,6 @@
     "lint-fix": "npm run lint -- --fix",
     "lint": "eslint src --max-warnings 0"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint-fix",
-      "pre-push": "npm run lint-fix && CI=true npm run test"
-    }
-  },
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -102,8 +96,7 @@
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-jest": "^22.14.1",
     "eslint-plugin-react": "^7.12.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "husky": "^1.1.4"
+    "eslint-plugin-react-hooks": "^1.6.1"
   },
   "jest": {
     "roots": [
