--- a/package.json
+++ b/package.json
@@ -85,6 +85,10 @@
     "react-transition-group": "^1.2.1",
     "redux-promise-middleware": "^5.1.1",
     "react-dev-utils": "^9.1.0",
+    "react-content-loader": "^4.2.2",
+    "react-select": "^3.0.4",
+    "react-transition-group": "^1.2.1",
+    "redux-promise-middleware": "^5.1.1",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
