--- a/package.json
+++ b/package.json
@@ -37,14 +37,8 @@
   ],
   "devDependencies": {
     "css-loader": "2.1.1",
-    "resolve": "1.12.0",
-    "resolve-url-loader": "3.1.0",
-    "sass-loader": "7.2.0",
-    "style-loader": "1.0.0",
-    "url-loader": "2.1.0",
     "react-dev-utils": "^9.0.3",
     "camelcase": "^5.2.0",
-    "semver": "6.3.0",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "mini-css-extract-plugin": "0.5.0",
@@ -83,6 +77,17 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "@svgr/webpack": "4.3.2",
+    "react-content-loader": "^4.2.2",
+    "react-loading-skeleton": "^1.2.0",
+    "react-select": "^3.0.4",
+    "react-transition-group": "^1.2.1",
+    "redux-promise-middleware": "^5.1.1",
+    "resolve": "1.12.0",
+    "resolve-url-loader": "3.1.0",
+    "sass-loader": "7.2.0",
+    "semver": "6.3.0",
+    "style-loader": "1.0.0",
+    "url-loader": "2.1.0",
     "webpack": "4.39.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "optimize-css-assets-webpack-plugin": "5.0.3",
