--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "^3.0.1",
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react-loading-skeleton": "^1.2.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -37,8 +38,9 @@
   ],
   "devDependencies": {
     "css-loader": "2.1.1",
-    "react-dev-utils": "^9.0.3",
     "camelcase": "^5.2.0",
+    "resolve": "1.12.0",
+    "react-dev-utils": "^9.0.3",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "mini-css-extract-plugin": "0.5.0",
@@ -82,7 +84,6 @@
     "react-select": "^3.0.4",
     "react-transition-group": "^1.2.1",
     "redux-promise-middleware": "^5.1.1",
-    "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
