Added copy .env instruction to Dockerfile-prod

--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -21,6 +21,9 @@ COPY src/ src/
 # Building the image
 RUN npm run build
 
+# Copy env files
+COPY .env* ./
+
 # Then, use nginx to serve the built files
 # See https://hub.docker.com/_/nginx
 FROM nginx:alpine
