--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-app-polyfill": "^1.0.2",
     "react-dom": "^16.8.0",
     "react-redux": "^7.1.3",
+    "react-responsive": "^8.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.0.1",
     "redux": "^4.0.1",
