--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "node": "10.17.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.2.1",
-    "@material-ui/icons": "^4.2.1",
+    "@material-ui/core": "^4.7.0",
+    "@material-ui/icons": "^4.5.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
-    "notistack": "^0.4.3",
-    "react": "^16.8.0",
-    "react-app-polyfill": "^1.0.2",
-    "react-dom": "^16.8.0",
+    "notistack": "^0.9.6",
+    "react": "^16.12.0",
+    "react-app-polyfill": "^1.0.4",
+    "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-responsive": "^8.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^3.2.0",
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
@@ -38,14 +38,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "css-loader": "2.1.1",
-    "camelcase": "^5.2.0",
-    "resolve": "1.12.0",
-    "react-dev-utils": "^9.0.3",
-    "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
-    "mini-css-extract-plugin": "0.5.0",
-    "is-wsl": "^1.1.0",
     "@babel/core": "7.5.5",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
@@ -55,24 +47,32 @@
     "babel-plugin-named-asset-import": "^0.3.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react-app": "^9.0.1",
+    "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "css-loader": "2.1.1",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^6.1.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.7.1",
     "eslint-config-react-app": "^5.0.1",
     "eslint-loader": "2.2.1",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-flowtype": "3.13.0",
     "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-jest": "^22.14.1",
-    "jest": "24.8.0",
+    "file-loader": "3.0.1",
+    "fs-extra": "7.0.1",
+    "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
+    "is-wsl": "^1.1.0",
+    "jest": "24.8.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
+    "mini-css-extract-plugin": "0.5.0",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -85,19 +85,19 @@
     "react-select": "^3.0.4",
     "react-transition-group": "^1.2.1",
     "redux-promise-middleware": "^5.1.1",
+    "react-dev-utils": "^9.1.0",
+    "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
+    "terser-webpack-plugin": "1.4.1",
+    "ts-pnp": "1.1.2",
     "url-loader": "2.1.0",
     "webpack": "4.39.1",
-    "html-webpack-plugin": "4.0.0-beta.5",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
-    "terser-webpack-plugin": "1.4.1",
-    "workbox-webpack-plugin": "4.3.1",
-    "ts-pnp": "1.1.2"
+    "workbox-webpack-plugin": "4.3.1"
   },
   "jest": {
     "roots": [
