--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "node": "10.17.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.7.0",
+    "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.34",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
     "notistack": "^0.9.6",
