--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "10.17.0"
   },
   "dependencies": {
-    "@material-ui/core": "^4.7.1",
+    "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.34",
     "dotenv": "6.2.0",
@@ -16,7 +16,6 @@
     "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
-    "react-responsive": "^8.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "redux": "^4.0.1",
@@ -51,6 +50,7 @@
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
+    "css-mediaquery": "^0.1.2",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.7.1",
