--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.34",
+    "clsx": "^1.0.4",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
     "notistack": "^0.9.6",
