--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.12.0",
+    "react-loading-skeleton": "^1.2.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0",
-    "react-loading-skeleton": "^1.2.0"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
