--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "jest --coverage --verbose",
-    "test1": "jest --coverage --verbose --clearCache",
     "test-watch": "node scripts/test.js",
     "lint-fix": "npm run lint -- --fix",
     "lint": "eslint src --max-warnings 0"
@@ -40,6 +39,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "file-loader": "3.0.1",
+    "fs-extra": "7.0.1",
+    "mini-css-extract-plugin": "0.5.0",
+    "is-wsl": "^1.1.0",
     "@babel/core": "7.5.5",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
@@ -49,7 +52,6 @@
     "babel-plugin-named-asset-import": "^0.3.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react-app": "^9.0.1",
-    "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
     "css-mediaquery": "^0.1.2",
@@ -58,31 +60,25 @@
     "eslint": "^6.7.1",
     "eslint-config-react-app": "^5.0.1",
     "eslint-loader": "2.2.1",
-    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-flowtype": "3.13.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
-    "html-webpack-plugin": "4.0.0-beta.5",
-    "identity-obj-proxy": "3.0.0",
-    "is-wsl": "^1.1.0",
+    "eslint-plugin-babel": "^5.3.0",
     "jest": "24.8.0",
+    "camelcase": "^5.2.0",
+    "identity-obj-proxy": "3.0.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
-    "mini-css-extract-plugin": "0.5.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "@svgr/webpack": "4.3.2",
     "react-content-loader": "^4.2.2",
     "react-loading-skeleton": "^1.2.0",
     "react-select": "^3.0.4",
@@ -95,12 +91,15 @@
     "semver": "6.3.0",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "^2.3.4",
-    "ts-pnp": "1.1.2",
     "url-loader": "2.1.0",
+    "@svgr/webpack": "4.3.2",
     "webpack": "4.39.1",
+    "html-webpack-plugin": "4.0.0-beta.5",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "ts-pnp": "1.1.2"
   },
   "jest": {
     "roots": [
