--- a/.gitignore
+++ b/.gitignore
@@ -54,8 +54,8 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
+# dotenv environment variables files
+.env*.local
 
 # next.js build output
 .next
@@ -74,10 +74,6 @@ typings/
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
