--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.12.0",
     "react-loading-skeleton": "^1.2.0",
+    "jss-plugin-compose": "^10.1.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.3",
