--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
-    "yup": "^0.28.1",
-    "swr": "^0.1.18"
+    "swr": "^0.1.18",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
