--- a/package.json
+++ b/package.json
@@ -6,23 +6,24 @@
     "node": "10.17.0"
   },
   "dependencies": {
+    "@hookform/resolvers": "^0.1.0",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.34",
     "clsx": "^1.1.0",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
+    "jss-plugin-compose": "^10.1.1",
+    "moment": "^2.24.0",
     "notistack": "^0.9.6",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^6.6.0",
     "react-loading-skeleton": "^1.2.0",
-    "jss-plugin-compose": "^10.1.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.3",
-    "moment": "^2.24.0",
-    "react-hook-form": "^4.9.6",
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
@@ -80,7 +81,7 @@
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
     "jest": "^25.1.0",
-    "jest-environment-jsdom-fourteen": "0.1.0",
+    "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-fetch-mock": "^3.0.3",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
@@ -174,7 +175,8 @@
     "watchPlugins": [
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
-    ]
+    ],
+    "restoreMocks": true
   },
   "babel": {
     "presets": [
