--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "node": "10.17.0"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@hookform/resolvers": "^0.1.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.34",
+    "@material-ui/pickers": "^3.2.10",
     "clsx": "^1.1.1",
+    "date-fns": "^2.16.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
     "jss-plugin-compose": "^10.1.1",
