--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-loading-skeleton": "^1.2.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^4.0.1",
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
@@ -51,8 +51,10 @@
   "devDependencies": {
     "@babel/core": "7.5.5",
     "@svgr/webpack": "4.3.2",
+    "@testing-library/dom": "^7.28.1",
     "@testing-library/jest-dom": "^5.3.0",
     "@testing-library/react": "^10.0.2",
+    "@testing-library/user-event": "^12.5.0",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
     "babel-eslint": "^10.0.3",
@@ -82,8 +84,9 @@
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
-    "jest": "^25.1.0",
+    "jest": "^25.5.4",
     "jest-environment-jsdom-fourteen": "1.0.1",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "jest-fetch-mock": "^3.0.3",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
@@ -98,11 +101,10 @@
     "react-content-loader": "^4.2.2",
     "react-dev-utils": "^9.1.0",
     "react-loading-skeleton": "^1.2.0",
-    "react-select": "^3.0.4",
     "react-transition-group": "^4.4.1",
     "redux-promise-middleware": "^5.1.1",
     "resolve": "1.12.0",
-    "resolve-url-loader": "3.1.0",
+    "resolve-url-loader": "^3.1.2",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
@@ -147,7 +149,7 @@
       "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
       "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
     ],
-    "testEnvironment": "jest-environment-jsdom-fourteen",
+    "testEnvironment": "jest-environment-jsdom-sixteen",
     "transform": {
       "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
