--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 HOST_PORT=3000
 # PUBLIC_URL=https://ni.fe.up.pt/st4g1ng/nijobs/
 # REACT_APP_BASE_ROUTE=test/test123
-REACT_APP_API_HOSTNAME="http://localhost:8087"
+REACT_APP_API_HOSTNAME="https://localhost:8087"
 
 # Uncomment to disable devtools
 # REACT_APP_ALLOW_DEV_TOOLS=false
