--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tiptap/extension-underline": "^2.0.0-beta.16",
     "@tiptap/react": "^2.0.0-beta.55",
     "@tiptap/starter-kit": "^2.0.0-beta.89",
+    "cancelable-promise": "^3.2.3",
     "clsx": "^1.1.1",
     "date-fns": "^2.16.1",
     "dotenv": "6.2.0",
