--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.12.0",
+    "react-easy-crop": "^3.3.2",
     "react-hook-form": "^6.6.0",
     "react-loading-skeleton": "^1.2.0",
     "react-redux": "^7.1.3",
