--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@material-ui/pickers": "^3.2.10",
     "clsx": "^1.1.1",
     "date-fns": "^2.16.1",
+    "dompurify": "^2.2.8",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
     "jss-plugin-compose": "^10.1.1",
@@ -34,12 +35,14 @@
     "react-easy-crop": "^3.3.2",
     "react-hook-form": "^7.3.6",
     "react-loading-skeleton": "^1.2.0",
+    "react-markdown": "^6.0.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.1",
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
+    "remark-breaks": "^2.0.2",
     "swr": "^0.4.1",
     "yup": "^0.28.3"
   },
