--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "eslint-loader": "2.2.1",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-flowtype": "3.13.0",
-    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.21.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3",
