--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.12.0",
     "react-easy-crop": "^3.3.2",
+    "react-ga": "^3.3.0",
     "react-hook-form": "^7.3.6",
     "react-loading-skeleton": "^1.2.0",
     "react-redux": "^7.1.3",
