Created function for generating events

--- a/.env
+++ b/.env
@@ -6,4 +6,5 @@ REACT_APP_API_HOSTNAME="https://localhost:8087"
 # Uncomment to disable devtools
 # REACT_APP_ALLOW_DEV_TOOLS=false
 
-ANALYTICS_ID="UA-207901526-1"
+# Google Analytics' Universal ID
+ANALYTICS_ID="UA-208192118-1"
