--- a/.env
+++ b/.env
@@ -9,5 +9,5 @@ REACT_APP_API_HOSTNAME="https://localhost:8087"
 # Google Analytics' Universal ID
 ANALYTICS_ID="UA-208192118-1"
 
-# GeoLocation Rapid Api keu
+# GeoLocation Rapid Api key
 GEO_API_KEY="APIKEY"
