--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ REACT_APP_API_HOSTNAME="https://localhost:8087"
 # REACT_APP_ALLOW_DEV_TOOLS=false
 
 # Google Analytics' Universal ID
-ANALYTICS_ID="UA-208192118-1"
+ANALYTICS_ID=
 
 # GeoLocation Rapid Api key
 GEO_API_KEY="APIKEY"
