--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "10.17.0"
+    "node": "14.18.3"
   },
   "scripts": {
     "start": "HTTPS=true node scripts/start.js",
@@ -31,6 +31,7 @@
     "date-fns": "^2.26.0",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
+    "js-cookie": "^3.0.1",
     "jss-plugin-compose": "^10.8.2",
     "lodash": "^4.17.21",
     "moment": "^2.24.0",
