--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "audit": "npm audit --production --audit-level=high"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.13.15",
     "@date-io/date-fns": "^1.3.13",
     "@hookform/resolvers": "^2.8.3",
     "@material-ui/core": "^4.12.3",
@@ -55,7 +56,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "7.5.5",
+    "@babel/core": "^7.13.15",
     "@svgr/webpack": "4.3.2",
     "@testing-library/dom": "^7.30.4",
     "@testing-library/jest-dom": "^5.15.1",
