Fix eslint babel to use nijobs-commons

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,7 @@
         "fetchMock": true
     },
 
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
 
     "parserOptions": {
         "ecmaFeatures": {
