--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test-ci": "jest --coverage --verbose",
     "test-watch": "node scripts/test.js",
     "lint-fix": "npm run lint -- --fix",
-    "lint": "eslint src --max-warnings 0",
+    "lint": "NODE_ENV=development eslint src --max-warnings 0",
     "audit": "npm audit --production --audit-level=high"
   },
   "dependencies": {
@@ -57,7 +57,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/core": "^7.13.15",
+    "@babel/core": "^7.17.8",
+    "@babel/eslint-parser": "^7.17.0",
     "@svgr/webpack": "4.3.2",
     "@testing-library/dom": "^7.30.4",
     "@testing-library/jest-dom": "^5.15.1",
@@ -65,7 +66,6 @@
     "@testing-library/user-event": "^12.5.0",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
-    "babel-eslint": "^10.0.3",
     "babel-jest": "^24.8.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.3",
