--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.2.10",
     "@niaefeup/nijobs-commons": "^1.9.0",
+    "@sentry/node": "^6.19.6",
+    "@sentry/react": "^6.19.6",
+    "@sentry/tracing": "^6.19.6",
     "@tiptap/extension-placeholder": "^2.0.0-beta.26",
     "@tiptap/extension-underline": "^2.0.0-beta.21",
     "@tiptap/react": "^2.0.0-beta.95",
