--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "dependencies": {
     "@babel/preset-env": "^7.13.15",
     "@date-io/date-fns": "^1.3.13",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@hookform/resolvers": "^2.8.3",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.5.1",
