--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "react-easy-crop": "^3.5.3",
     "react-ga": "^3.3.0",
     "react-hook-form": "^7.20.4",
+    "react-markdown": "^8.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "remark-gfm": "^3.0.1",
     "swr": "^0.4.1",
     "yup": "^0.28.3"
   },
