--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ HOST_PORT=443
 # PUBLIC_URL=https://ni.fe.up.pt/st4g1ng/nijobs/
 # REACT_APP_BASE_ROUTE=test/test123
 REACT_APP_API_HOSTNAME="https://localhost:8087"
+REACT_APP_LOCATION_SERVICE_HOSTNAME="https://ni.fe.up.pt/nijobs/locations"
 
 # Uncomment to disable devtools
 # REACT_APP_ALLOW_DEV_TOOLS=false
