--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.12.0",
     "react-easy-crop": "^3.5.3",
-    "react-ga": "^3.3.0",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.20.4",
     "react-markdown": "^8.0.3",
     "react-redux": "^7.2.6",
